fixed spacing

--- a/public/results.css
+++ b/public/results.css
@@ -233,6 +233,8 @@ main{
     /* align-items: center; */
     width: 100%;
     /* background-color: #9D6989; */
+    margin: 10px;
+    padding: 10px;
 }
 #search-results div {
     margin-left: 20px;
